syntax = "proto3";

package test;

enum Status {
  UNKNOWN = 0;
  ACTIVE = 1;
  INACTIVE = 2;
}

message User {
  int32 id = 1;
  string name = 2;
  string email = 3;
  Status status = 4;
  repeated string tags = 5;
}

message UserRequest {
  int32 user_id = 1;
  bool include_tags = 2;
}

message UserResponse {
  User user = 1;
  bool success = 2;
  string error_message = 3;
}

service UserService {
  rpc GetUser(UserRequest) returns (UserResponse);
  rpc UpdateUser(User) returns (UserResponse);
} 